# openarm_ros2

openarm_bimanual_moveit_config/launch/: demo.launch.py
openarm_bringup/launch/: openarm.bimanual.launch.py
openarm_hardware/include/openarm_hardware/: v10_simple_hardware.hpp
openarm_hardware/src/: v10_simple_hardware.cpp
openarm_single_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
openarm_single_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  openarm.srdf
openarm_single_moveit_config/launch/: demo.launch.py
